--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ body {font-size:16px;}
     <p>Vehicle dynamics subteam member that contributed to the mechanical design of NYU's 2024 Electric Formula car.</p>
     <p><b>Project Objectives</b></p>
     <ul>
-      <li>Suspension Geometry dDesign</li>
+      <li>Suspension Geometry Design</li>
       <li>Chassis and Ergonomics</li>
       <li>Steering Geometry</li>
     </ul>
